Change Maven group

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 	compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: kotlin_version
 	compile group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jre8", version: kotlin_version
 
-	compile group: "net.shadowfacts", name: "krypton", version: krypton_version
+	compile group: "net.shadowfacts.krypton", name: "krypton", version: krypton_version
 
 	compile group: "net.shadowfacts", name: "ekt", version: ekt_version
 }
