--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version = 0.1.0-SNAPSHOT
-group = net.shadowfacts
+group = net.shadowfacts.krypton
 archivesBaseName = krypton-ekt
 
 kotlin_version = 1.1.51
